Made changes to try to resolve issue with headshotContainer's stretching, created plan to refactor introduction such that this doesnt occur.

--- a/portfolio/src/components/Introduction/introduction.css
+++ b/portfolio/src/components/Introduction/introduction.css
@@ -9,25 +9,37 @@
 	justify-content: center;
 	align-items: center;
 }
+ /*
 
+Modify introduction such that
+
+titles embedded directly into App.js
+
+headshot container is separated into its own component
+
+keep Name, and Description 
+
+  */
 
 .headshotContainer {
     width: 275px;
     height: 275px;
     border-radius: 50%;
     overflow: hidden;
-    display: flex;
+    display: flex; 
     background-color: rgb(68, 71, 90);
     border: 4px solid rgb(24, 24, 27); /* Optional: Adds a border around the circle */
     position: relative;
 }
 
 .headshot {
+    
     width: 100%;
-    height: 100%;
+    height: 120%;
     object-fit: cover;
-    position: absolute;
-    top: 3%;
+   /* position: absolute; */
+    object-position: center;
+    /*top: 5%; */
 }
 
 .name {
